# site-portfolio

./: Procfile  README.md  db.sqlite3  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: index.html
gallery/: admin.py  forms.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py  0002_auto_20210503_0531.py  0003_alter_vectordrawing_image.py  0004_alter_vectordrawing_image.py  0005_auto_20210503_0614.py  0006_auto_20210503_0623.py  0007_alter_vectordrawing_tags.py  0008_alter_vectordrawing_tags.py  0009_alter_vectordrawing_tags.py  0010_alter_vectordrawing_image.py  0011_auto_20210603_0635.py
gallery/static/gallery/: style.css
gallery/templates/: 400.html  403.html  404.html  500.html
gallery/templates/gallery/: 403.html  add.html  base.html  image_id.html  index.html
gallery/templates/registration/: login.html
site_portfolio/: asgi.py  settings.py  urls.py  wsgi.py
