[tool.poetry]
name = "site-portfolio"
version = "0.1.0"
description = "First attempt to create site for my girlfriend"
authors = ["Spartan327 <vbutovchenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
autopep8 = "^1.5.7"
easy-thumbnails = "^2.7.1"
django-cleanup = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
